# vectorized-join

./: .clang-format  .gitignore  CMakeLists.txt  README.md  algorithm.pseudo  benchmark.toml  benchmark_hash.toml  benchmark_histogram.toml  benchmark_join.toml  benchmark_probe.toml  hash.md
benchmark/local/: run_1.csv
benchmark/profile/hash/: v128_h32.ncu-rep  v128_h64.ncu-rep  v32_h32.ncu-rep  v32_h64.ncu-rep  v64_h32.ncu-rep  v64_h64.ncu-rep  v8_h32.ncu-rep  v8_h64.ncu-rep
benchmark/src/: eval.py
benchmark/testbench/: run_1.csv
src/: config.h  join_benchmark.cu
src/base/: config.h  debug.cuh  types.hpp
src/benchmark/: config.hpp  configuration.hpp  data_generator.cu  data_generator.hpp  example.py  log.hpp  trace.hpp
src/hash/: hash.cu
src/join/: join_provider.cu  join_provider.cuh  partition.cu
src/playground/: filter.cu  hash_benchmark.cu  histogram_benchmark.cu  partition_test.cu  probe_benchmark.cu
